# libaf

./: .gitmodules  CMakeLists.txt  README
include/af/: libaf.h
include/libaf/: af.h
src/: bands.c  bark.c  frequencies.c  irregularity.c  mfccs.c  moments.c  partial_features.c  spectra.c  spectral_moments.c  spectral_shape.c  temporal.c  tristimulus.c  utils.c
src/plan/: array_arguments.h
